<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LodgingListFragment">

    <item
        android:id="@+id/action_locate"
        android:title="@string/action_locate"
        android:icon="@drawable/ic_locate"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_website"
        android:title="@string/action_website"
        android:icon="@drawable/ic_website"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_call"
        android:title="@string/action_call"
        android:icon="@drawable/ic_call"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

</menu>
